# fbsrankings

./: .bumpversion.cfg  .flake8  .gitignore  .importlinter  .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  config.json  config_csv_files.json  config_urls.json  mypy.ini  pylintrc  requirements-dev.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  start.py  whitelist.py
fbsrankings/: __init__.py  __main__.py  application.py  config.json  main.py
fbsrankings/application/: __init__.py  application.py
fbsrankings/application/command/: __init__.py  calculate_rankings_for_season.py  command_handler.py  command_manager.py  import_season_by_year.py
fbsrankings/cli/: __init__.py  application.py  core.py  main.py  spinner.py  tspinner.py  types.py
fbsrankings/command/: __init__.py  calculate_rankings_for_season.py  import_season_by_year.py
fbsrankings/common/: __init__.py  command.py  event.py  identifier.py  query.py
fbsrankings/data/: config.json  files.csv  names.csv  urls.csv
fbsrankings/data/1998/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/1999/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2000/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2001/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2002/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2003/: fbs_teams.csv
fbsrankings/data/2004/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2005/: fbs_teams.csv
fbsrankings/data/2006/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2007/: fbs_teams.csv
fbsrankings/data/2008/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2009/: fbs_teams.csv
fbsrankings/data/2010/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2011/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2012/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2013/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2014/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2015/: fbs_games.csv  fbs_teams.csv
fbsrankings/data/2016/: fbs_games.csv  fbs_teams.csv
fbsrankings/domain/: __init__.py  affiliation.py  cancelservice.py  factory.py  game.py  importservice.py  season.py  team.py
fbsrankings/domain/model/: affiliation.py  factory.py  game.py  ranking.py  record.py  repository.py  season.py  team.py
fbsrankings/domain/service/: cancelservice.py  colley_matrix_ranking_service.py  game_strength_ranking_service.py  importservice.py  record_service.py  simultaneous_wins_ranking_service.py  srs_ranking_service.py  strength_of_schedule_ranking_service.py  validation_service.py  validationservice.py
fbsrankings/event/: __init__.py  affiliation.py  game.py  ranking.py  record.py  season.py  team.py
fbsrankings/infrastructure/: __init__.py  query.py  query_manager.py  sportsreference.py  teamnamemap.py  transaction.py  unit_of_work.py  unitofwork.py
fbsrankings/infrastructure/local/: __init__.py  affiliationrepository.py  gamerepository.py  repository.py  seasonrepository.py  teamrepository.py  unitofwork.py
fbsrankings/infrastructure/memory/: __init__.py  affiliation.py  data_source.py  datasource.py  game.py  gamerepository.py  handler.py  repository.py  season.py  team.py  teamrepository.py  unitofwork.py
fbsrankings/infrastructure/sportsreference/: __init__.py  affiliation.py  datasource.py  game.py  handler.py  repository.py  season.py  sports_reference.py  sportsreference.py  team.py
fbsrankings/infrastructure/sqlite/: __init__.py  affiliation.py  data_source.py  datasource.py  game.py  handler.py  repository.py  season.py  team.py  unitofwork.py
fbsrankings/query/: __init__.py  affiliation_count_by_season.py  canceled_games.py  game_by_id.py  game_count_by_season.py  game_ranking_by_season_week.py  latest_season_week.py  most_recent_completed_week.py  season_by_id.py  season_by_year.py  seasons.py  team_by_id.py  team_count_by_season.py  team_ranking_by_season_week.py  team_record_by_season_week.py  week_count_by_season.py
fbsrankings/service/: __init__.py  config.py  service.py
fbsrankings/service/command/: calculate_rankings_for_season.py  command_manager.py
requirements/: Python310-dev.txt  Python310.txt  Python311-dev.txt  Python311.txt  Python312-dev.txt  Python312.txt  Python36-dev.txt  Python36.txt  Python37-dev.txt  Python37.txt  Python38-dev.txt  Python38.txt  Python39-dev.txt  Python39.txt
src/communication/bridge/: __init__.py
src/communication/bus/: __init__.py
src/communication/channel/: __init__.py
src/communication/messages/: __init__.py
src/fbsrankings/: __init__.py  __main__.py  config.py  context.py  fbsrankings.ini  typing_helpers.py
src/fbsrankings/channel/: __init__.py
src/fbsrankings/cli/: __init__.py  application.py  environment.py  error.py  main.py  progress.py  spinner.py  types.py
src/fbsrankings/command/: __init__.py
src/fbsrankings/common/: __init__.py  command.py  event.py  query.py  typing_helpers.py
src/fbsrankings/config/: __init__.py  config.py
src/fbsrankings/context/: __init__.py  context.py
src/fbsrankings/data/: config.json  fbsrankings.ini  schema.json
src/fbsrankings/domain/: __init__.py
src/fbsrankings/event/: game.py  team.py  (+3 more)
src/serialization/: __init__.py
tests/: fbsrankings_test.py
tests/cli/: conftest.py  copy_files.py  games_test.py  import_test.py  latest_test.py  main_test.py  seasons_test.py  teams_test.py
tests/config/: common.ini  memory.ini  sqlite.ini  tinydb.ini
tests/coverage/: coverage_14.0.0.txt  coverage_15.0.0.txt  coverage_2025-03-03.txt
tests/data/: coverage_baseline.txt  empty_data.db  main_help.txt  main_import_all_drop_check.txt  main_invalid_command.txt  main_invalid_command1.txt  main_invalid_command2.txt  main_seasons.txt  main_teams.txt  test_config.ini  test_config.json  test_data.json
tests/output/: main_games.txt  main_games_2012_empty.txt  main_games_2012w9_empty.txt  main_games_2012w9_full.txt  main_games_empty.txt  main_import_2012_2013_drop_check.txt  main_latest.txt  main_latest_rating_colley_matrix_top_5_empty.txt  main_seasons_empty.txt  main_seasons_full.txt  main_teams_2012_full.txt  main_teams_2012w9.txt
(+596 files in other folders)
