[metadata]
name = fbsrankings
version = 15.0.0-beta
description = Import college football teams and games from sportsreference.com and calculate rankings for the Division I Football Bowl Subdivision (FBS) teams
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mikee385/fbsrankings
author = Michael Stephen Pierce
author_email = mikee385@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
keywords =
    stats
    sports
    sportsreference
platform = any

[options]
packages = find:
install_requires =
    beautifulsoup4
    html5lib
    numpy
    prettytable
    protobuf
    pydantic
    tinydb
    tqdm
python_requires = >=3.9
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    fbsrankings=fbsrankings.cli.main:main

[options.extras_require]
dev =
    bandit
    black
    bump2version
    coverage
    flake8
    flake8-2020
    flake8-annotations
    flake8-broken-line
    flake8-bugbear
    flake8-builtins
    flake8-commas
    flake8-comprehensions
    flake8-eradicate
    flake8-gettext
    flake8-implicit-str-concat
    flake8-logging-format
    flake8-mutable
    flake8-no-pep420
    flake8-pie
    flake8-print
    flake8-pytest-style
    flake8-quotes
    flake8-raise
    flake8-self
    flake8-simplify
    flake8-super
    flake8-tidy-imports
    flake8-typing-imports
    flake8-use-fstring
    flake8-use-pathlib
    import-linter
    isort
    mypy
    pep8-naming
    pip-tools
    pre-commit
    py-make
    pylint
    pyroma
    pytest
    setuptools
    sort-requirements
    twine
    typeguard
    types-beautifulsoup4
    types-dataclasses
    types-prettytable
    types-protobuf
    types-setuptools
    types-tqdm
    virtualenv
    vulture
    wheel
test =
    pytest

[flake8]
ignore = ANN101, ANN102, B907, E203, E501, W503
max-line-length = 88
max-complexity = 20
inline-quotes = double
select = A,B,B9,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z
exclude = .git,.mypy_cache,.pytest_cache,.vs,build,dist,env,profiling,__pycache__,*.egg-info,whitelist.py,*_pb2.*
per-file-ignores =
    setup.py:INP001
    src/fbsrankings/cli/application.py:T201
    src/fbsrankings/cli/error.py:ANN401,T201
    src/fbsrankings/storage/sqlite/*:T201
    src/serialization/infrastructure/json_serializer.py:ANN401
    tests/cli/*:ANN401

[isort]
py_version = 39
profile = black
case_sensitive = false
force_single_line = true
lines_after_imports = 2
order_by_type = false
skip_glob = *_pb2.*

[pylint]
good-names = n,a,b,x,C,E,Q,R,T
max-line-length = 88
ignore = .git,.mypy_cache,.pytest_cache,.vs,build,dist,env,profiling,__pycache__,*.egg-info,whitelist.py
ignore-patterns = .*_pb2\..*

[pylint.messages_control]
disable = duplicate-code,
    line-too-long,
    missing-class-docstring,
    missing-function-docstring,
    missing-module-docstring,
    no-name-in-module,
    too-few-public-methods,
    too-many-ancestors,
    too-many-arguments,
    too-many-branches,
    too-many-instance-attributes,
    too-many-locals,
    too-many-positional-arguments,
    too-many-statements,

[pylint.similarities]
min-similarity-lines = 1000
ignore-comments = yes
ignore-docstrings = yes
ignore-imports = yes

[mypy]
python_version = 3.9
strict = True
allow_untyped_calls = True
warn_unused_ignores = False
plugins = pydantic.mypy, tinydb.mypy_plugin

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-fbsrankings.messages.*]
ignore_errors = True

[bandit]
skips = B301,B403,B608
